examples/test/testpolicy10948.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10948
  namespace: namespace271
spec:
  podSelector:
    matchLabels:
      key36: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value38
          key28: value34
      podSelector:
        matchLabels:
          key6: value36
          key18: value4
